# 2dog

./: .gitattributes  .gitignore  .gitmodules  2dog.sln  2dog.sln.DotSettings  2dog.slnx  2dog.tests.slnf  Directory.Build.props  Directory.Build.targets  LICENSE  MULTI-INSTANCE-PLAN.md  README.md  UPSTREAM-CHANGES.md  build-godot.py  build.py  deploy.py  dotnet-tools.json  fix.ps1  global.json  import-project.py  nuget.config  packages.slnf  pyproject.toml  runit-cs.py
demo/: .gitignore  Directory.Build.props  GDScriptLinkerProbe.gd  GDScriptLinkerProbe.gd.uid  GodotApiSmoke.cs  GodotApiSmoke.cs.uid  Program.cs  Program.cs.uid  README.md  SpinningCube.cs  SpinningCube.cs.uid  Ticker.cs.uid  ToolNode.cs.uid  TwoDogWebBoot.cs  TwoDogWebBoot.cs.uid  demo.2dog.csproj  demo.csproj  demo.sln  main.tscn  project.godot  spinning_cube.gd  spinning_cube.gd.uid  splash.png.import  tool_test.tscn
demo.web/: demo.web.csproj  global.json
docs/: package-lock.json  package.json
engine/: Engine.cs  LibGodot.cs  Program.cs  engine.csproj
game/: Class1.cs  Program.cs  README.md  Ticker.cs  ToolNode.cs  TwoDogWebBoot.cs  export_presets.cfg  fix.ps1  game.csproj  game.sln  project.godot
project/: README.md  Ticker.cs  main.tscn  project.csproj  project.csproj.old  project.godot
scripts/: compat_test.py  dump_extension_api.py  gen_web_trampolines.py  nuget-retire.ps1  nuget_retire.py
templates/: 2dog.Templates.csproj  README.md
todo/: IMPROVEMENTS.md
twodog.bindings/: Attributes.cs  Callable.cs  Collections.cs  GodotObject.cs  GodotSynchronizationContext.cs  MathTypes.cs  Mathf.cs  NodePath.cs  README.md  SignalAwaiter.cs  StringName.cs  TypedApi.cs  Variant.cs  twodog.bindings.csproj
twodog.bindings.compat/: Program.cs  twodog.bindings.compat.csproj
twodog.bindings.generator/: ApiGenerator.cs  Program.cs  twodog.bindings.generator.csproj
twodog.bindings.tests/: AutoRegisterGeneratorTests.cs  AutoRegisterTests.cs  CompatTests.cs  ExportBroadTests.cs  ExportSignalTests.cs  ExtensionClassGcTests.cs  ExtensionClassTests.cs  GeneratorDriverTests.cs  GodotBindingsFixture.cs  HostedParallelTests.cs  InteropCoreTests.cs  LifetimeTests.cs  PropertyTests.cs  RefCountConcurrencyTests.cs  RefCountedUserClassTests.cs  ScriptShimTests.cs  SignalAwaiterTests.cs  SignalEventTests.cs  SignalPackedTests.cs  ThrowingUserCodeTests.cs  TypedApiTests.cs  VariantCollectionsTests.cs  twodog.bindings.tests.csproj
twodog.cli/: ConvertCommand.cs  CsprojPatcher.cs  GodotProjectFile.cs  README.md  SolutionOps.cs  TemplateAssets.cs  twodog.cli.csproj
twodog.engine/: .gitignore  Engine.cs  GodotFixtureBase.cs  GodotHeadlessFixture.cs  LibGodot.cs  LibGodotLoader.cs  README.md  WebHost.cs  WebTrampolines.cs  twodog.engine.csproj
twodog.fixture/: GodotFixtureBase.cs
twodog.gdextension/: Engine.cs  NativeLoader.cs  README.md  WebHost.cs  twodog.gdextension.csproj
twodog.generators/: AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  AutoRegisterGenerator.cs  ExportSignalGenerator.cs  IsExternalInit.cs  twodog.generators.csproj
twodog.hosting.runtime/: ResidentProgram.cs  Scenarios.cs  twodog.hosting.runtime.csproj
twodog.hosting.tests/: DualStartTests.cs  ExceptionSanitizerTests.cs  HostGuard.cs  LifecycleTests.cs  ParallelCollectionsTests.cs  Scenarios.cs  twodog.hosting.tests.csproj
(+176 files in other folders)
