[project]
name = "2dog"
version = "0.1.0"
description = "2dog is Godot, but backwards! Embed libgodot in C# to run games, apps, tools, CI, unit tests, and more."
authors = [
    {name = "Moritz Voss",email = "mail@moritzvoss.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "poethepoet>=0.40.0",
    "rich>=14.2.0",
    "scons (>=4.9.1,<5.0.0)",
]


[tool.poetry]
package-mode = false

[tool.poe.tasks]
version = "version:echo"

[tool.poe.tasks.build-godot]
help = "Godot build: build libgodot and glue code"
sequence = [
    { cmd = "uv run build-godot.py" },
]

[tool.poe.tasks.build]
help = "dotnet build: Platform packages, twodog library, and NuGet packages"
sequence = [
    { cmd = "dotnet pack platforms -p:ForcePackAllPlatforms=true" },
    { cmd = "dotnet pack twodog.engine" },
    { cmd = "dotnet pack twodog.xunit" },
    { cmd = "dotnet pack twodog" },
    { cmd = "dotnet restore" },
]

[tool.poe.tasks.compat-test]
help = "Verify every hash pinned in gdextension/extension_api.json resolves in BOTH locally built libgodot flavors (mono and gdext); missing binaries or any engine ERROR during boot hard-fail. Variant via TWODOG_VARIANT (default debug)"
cmd = "uv run scripts/compat_test.py"

[tool.poe.tasks.dump-api]
help = "Refresh gdextension/extension_api.json from the non-mono (gdext) editor binary"
cmd = "uv run scripts/dump_extension_api.py"

[tool.poe.tasks.nuget-retire]
help = "Retire old package versions on nuget.org: plan (default) / unlist / deprecate. Args are passed through, see scripts/nuget_retire.py --help"
cmd = "uv run scripts/nuget_retire.py"

[tool.poe.tasks.build-all]
help = "Complete build: Godot engine, platform packages, twodog library, and NuGet packages"
sequence = [
    { ref = "build-godot" },
    { ref = "build" },
]

